--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "pre-commit": "lint-staged"
   },
   "lint-staged": {
     "src/**/*.{js,json}": [
